--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
     <mat-card class="main">
-        <mat-card-title class="text-center mb-4">Tela de Login de Loja Virtual</mat-card-title>
+        <mat-card-title class="text-center mb-4">Login de Minha Loja</mat-card-title>
         <form class="form-login" (ngSubmit)="onSubmit()" [formGroup]="loginForm">
             <mat-form-field class="w-100">
                 <mat-label>Email</mat-label>
@@ -23,13 +23,15 @@
                     A senha deve ter no minimo 8 caracteres.
                 </mat-error>
             </mat-form-field>
-            <button mat-raised-button class="w-50 m-2 mb-3" color="primary" type="submit">Entrar</button>
+            <button mat-raised-button class="w-50 m-2 mb-3" color="primary" type="submit"
+                [disabled]="!loginForm.valid">Entrar</button>
         </form>
 
         <div class="divisor-register">
             <p class="divisor">
                 <span class="divisor-text">ou</span></p>
-            <button mat-raised-button class="button-register w-50 mt-2" type="button">Cadastre-se</button>
+            <button mat-raised-button class="button-register w-50 mt-2" type="button"
+                (click)="goToRegister()">Cadastre-se</button>
         </div>
 
     </mat-card>
