--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -9,9 +9,10 @@
   .main {
     width: 640px;
     padding: 40px;
+    margin: 20px;
 
     .form-login {
-      min-width: 150px;
+      min-width: 120px;
       max-width: 400px;
       width: 100%;
       margin: auto;
