remoção de bootstrap

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="login-container">
     <mat-card class="main">
-        <mat-card-title class="text-center mb-4">Login de Minha Loja</mat-card-title>
+        <mat-card-title class="title">Login de Minha Loja</mat-card-title>
         <form class="form-login" (ngSubmit)="onSubmit()" [formGroup]="loginForm">
-            <mat-form-field class="w-100">
+            <mat-form-field class="input">
                 <mat-label>Email</mat-label>
                 <input matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com">
                 <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
@@ -13,7 +13,7 @@
                 </mat-error>
             </mat-form-field>
 
-            <mat-form-field class="w-100 mt-2">
+            <mat-form-field class="input">
                 <mat-label>Senha</mat-label>
                 <input matInput [formControl]="passwordFormControl" placeholder="Ex. mypass13" type="password">
                 <mat-error *ngIf="passwordFormControl.hasError('required')">
@@ -23,16 +23,15 @@
                     A senha deve ter no minimo 8 caracteres.
                 </mat-error>
             </mat-form-field>
-            <button mat-raised-button class="w-50 m-2" color="primary" type="submit"
+            <button mat-raised-button class="button" color="primary" type="submit"
                 [disabled]="!loginForm.valid">Entrar</button>
 
-            <button mat-flat-button class="w-50 m-1" type="button" (click)="goToForgot()">Esqueceu sua senha?</button>
+            <button mat-flat-button class="button" type="button" (click)="goToForgot()">Esqueceu sua senha?</button>
         </form>
 
         <div class="divisor-register">
-            <p class="divisor">
-                <span class="divisor-text">ou</span></p>
-            <button mat-raised-button class="button-register w-50 mt-2" type="button"
+            <hr class="hr-text" data-content="ou">
+            <button mat-raised-button class="button button-register" type="button"
                 (click)="goToRegister()">Cadastre-se</button>
         </div>
 
