--- a/src/app/forgot/forgot.component.scss
+++ b/src/app/forgot/forgot.component.scss
@@ -1,22 +1,21 @@
-.forgot-container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #59b7b7;
-  background-size: auto;
-
-  .main {
-    width: 640px;
-    padding: 40px;
-    margin: 20px;
-
-    .form-forgot {
-      min-width: 120px;
-      max-width: 400px;
-      width: 100%;
-      margin: auto;
-      text-align: center;
-    }
+.title {
+  margin-bottom: 20px;
+  width: 100%;
+  text-align: center;
+  font-size: medium;
+}
+.form-forgot {
+  min-width: 120px;
+  max-width: 400px;
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  .input {
+    width: 100%;
+    margin-top: 10px;
+  }
+  .button {
+    width: 200px;
+    margin: 5px;
   }
 }
