--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -7,38 +7,69 @@
   background-size: auto;
 
   .main {
+    text-align: center;
     width: 640px;
     padding: 40px;
     margin: 20px;
 
+    .title {
+      margin-bottom: 20px;
+    }
+
     .form-login {
+      .input {
+        width: 100%;
+        margin-top: 10px;
+      }
       min-width: 120px;
       max-width: 400px;
       width: 100%;
       margin: auto;
       text-align: center;
     }
+    .button {
+      width: 200px;
+      margin: 5px;
+    }
     .divisor-register {
       min-width: 150px;
       max-width: 400px;
       width: 100%;
       margin: auto;
+      margin-top: -10px;
       text-align: center;
-      .divisor {
-        background-image: linear-gradient(
-          180deg,
-          transparent 10px,
-          #7a7a7a94 0,
-          #7a7a7a94 11px,
-          transparent 0
-        );
+      .hr-text {
+        line-height: 1em;
+        position: relative;
+        outline: 0;
+        border: 0;
+        color: black;
         text-align: center;
-
-        .divisor-text {
+        height: 1.5em;
+        opacity: 0.5;
+        &:before {
+          content: "";
+          background: linear-gradient(
+            to right,
+            transparent,
+            #333331,
+            transparent
+          );
+          position: absolute;
+          left: 0;
+          top: 50%;
+          width: 100%;
+          height: 1px;
+        }
+        &:after {
+          content: attr(data-content);
+          position: relative;
           display: inline-block;
-          background-color: #fff;
-          padding: 0 10px;
-          text-transform: none;
+          color: black;
+
+          padding: 0 0.5em;
+          line-height: 1.5em;
+          background-color: #fcfcfa;
         }
       }
       .button-register {
