--- a/src/app/recovery/recovery.component.html
+++ b/src/app/recovery/recovery.component.html
@@ -1,9 +1,9 @@
 <div class="recovery-container">
     <mat-card class="main">
-        <mat-card-title class="text-center mb-4">Digite sua nova Senha
+        <mat-card-title class="title">Digite sua nova Senha
         </mat-card-title>
         <form class="form-recovery" (ngSubmit)="onSubmit()" [formGroup]="recoveryForm">
-            <mat-form-field class="w-100 mt-2">
+            <mat-form-field class="input">
                 <mat-label>Senha</mat-label>
                 <input matInput [formControl]="passwordFormControl" placeholder="Ex. mypass13" type="password">
                 <mat-error *ngIf="passwordFormControl.hasError('required')">
@@ -13,7 +13,7 @@
                     A senha deve ter no minimo 8 caracteres.
                 </mat-error>
             </mat-form-field>
-            <button mat-raised-button class="w-50 m-2" color="primary" type="submit"
+            <button mat-raised-button class="button" color="primary" type="submit"
                 [disabled]="!recoveryForm.valid">Alterar Senha</button>
         </form>
     </mat-card>
