correção em fluxo de login

--- a/src/app/admin/upload-product/upload-product.component.html
+++ b/src/app/admin/upload-product/upload-product.component.html
@@ -1,4 +1,8 @@
 <mat-card class="main">
     <mat-card-title class="title">Upload de Produtos para Minha Loja</mat-card-title>
+    <mat-form-field class="input">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Ex. pat@example.com">
+    </mat-form-field>
     <button mat-raised-button color="primary" class="button" type="button">Teste</button>
 </mat-card>
