--- a/src/app/admin/upload-product/upload-product.component.scss
+++ b/src/app/admin/upload-product/upload-product.component.scss
@@ -7,7 +7,10 @@
   .title {
     margin-bottom: 20px;
   }
-
+  .input {
+    width: 100%;
+    margin-top: 10px;
+  }
   .button {
     width: 200px;
     margin: 5px;
